# auth-rs-warp

./: .gitignore  Cargo.toml  README.md  makefile
migrations/: users.sql
src/: config.rs  errors.rs  main.rs  schema.rs
src/models/: user.rs
src/routes/: users.rs
src/tests/: users.rs
src/utils/: crypto.rs  db_conn.rs
