[package]
name = "auth-rs-warp"
version = "0.1.0"
authors = ["Nicolas Marshall <marshall.nicolas@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4", features = ["server", "test"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0" }

# db, models
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.32.0"
chrono = { version = "0.4", features = ["serde"] }

# config, errors, logs
lazy_static = "1.5.0"
anyhow = "1.0"
thiserror = "2.0"
config = "0.15"
log = "0.4"
pretty_env_logger = "0.5"

# crypto, auth
ed25519-dalek = { version = "3.0.0-pre.5", features = ["digest", "fast", "rand_core"]}
argonautica = "0.2"
rust-crypto = "0.2"
bytes = "1.11"
rand = { git = "https://github.com/rust-random/rand", features = ["sys_rng"] }
base64 = "0.22"

# musl
openssl = "0.10"
